--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -21,6 +21,7 @@
 @import url('./shared/dropdownMenu.css');
 @import url('./shared/badge.css');
 @import url('./shared/checkbox.css');
+@import url('./shared/switch.css');
 
 .errors {
   color: var(--jp-warn-color0);
