--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -25,6 +25,7 @@
 @import url('./shared/dialog.css');
 @import url('./shared/switch.css');
 @import url('./shared/dialog.css');
+@import url('./shared/popover.css');
 
 .errors {
   color: var(--jp-warn-color0);
