Add story maps (#994)
* Add command

* Add landmarks as a layer

* Move to landmark wip

* Add a zoom to layer button

* Add a story map thing to the file

* Add temp button to create story

* Add story creation method to model

* Add story editing(?) panel

* Rename panel

* Add storiesMap to file

* Add some panels

* Add temp viewer panel

* Start implementing story viewer

* Use textarea for markdown field

* Push zoom button to right side

* Only support one story

* Handle story signal stuff

* Update landmark order when drag and dropping

* Update viewer order based on list order

* Tidy

* Hack story selection

* Effect cleaning

* Return ID as well

* Refactor viewer panel

* Refactor editor panel

* Dont reverse landmark list

* Update viewer content when selecting landmarks

* Remove rank from schema

* Update viewer panel style

* Move to position when clicking landmark in unguided tour

* Remove zoomies

* Fix status bar loading when adding landmark

* Use one panel for both story panels

* Refactor editor panel

* Remove stray console logs

* Add story presentation as a setting

* Add presentation flags to side panels

* Some styling

* see ess ess

* Add button to recenter landmark

* Remove hardcoded id

* Clean up

* Format-on-save, why hast thou forsaken me?

* Landmark icon

* Allow customization for transition animations

* Change preview button to a switch

* Move nav buttons

* Cancel animations before starting another

* Remove landmarks item from story editor form

* Restore zoomies

* Replace visibility toggle with slide number indicator

* Move transition settings to landmark

* Select layer when moving through story; Move CSS to classes

* Better nav button styles

* Get story when mounting component

* Change default button border color

* Add form button to update extent and zoom of landmark

* Add padding

* GOOD rebase

* Preload image in case link is bad

* Rename storiesMap

* Change landmark extent button text

* Dont display slide 

--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -11,6 +11,7 @@
 @import url('./statusBar.css');
 @import url('./temporalSlider.css');
 @import url('./tabPanel.css');
+@import url('./storyPanel.css');
 @import url('ol/ol.css');
 @import url('./shared/button.css');
 @import url('./shared/toggle.css');
@@ -20,6 +21,7 @@
 @import url('./shared/dropdownMenu.css');
 @import url('./shared/badge.css');
 @import url('./shared/checkbox.css');
+@import url('./shared/switch.css');
 
 .errors {
   color: var(--jp-warn-color0);
