Add radio and dialog components  (#1005)
* Add radio group component

* Add Command and Dialog

* Update lock

--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -21,6 +21,8 @@
 @import url('./shared/dropdownMenu.css');
 @import url('./shared/badge.css');
 @import url('./shared/checkbox.css');
+@import url('./shared/radioGroup.css');
+@import url('./shared/dialog.css');
 @import url('./shared/switch.css');
 
 .errors {
