--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -26,6 +26,7 @@
 @import url('./shared/dialog.css');
 @import url('./shared/switch.css');
 @import url('./shared/popover.css');
+@import url('./shared/command.css');
 
 .errors {
   color: var(--jp-warn-color0);
