--- a/packages/base/style/stacBrowser.css
+++ b/packages/base/style/stacBrowser.css
@@ -32,6 +32,11 @@
   gap: 0.5rem;
 }
 
+.jgis-stac-datepicker-button {
+  padding: 0 0.5rem;
+  width: 100%;
+}
+
 .jgis-stac-browser-filters-panel {
   min-height: 145px;
   display: flex;
@@ -88,6 +93,7 @@
 
 .jgis-stac-filter-extension-panel {
   padding: 1rem;
+  padding-bottom: 0;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -133,12 +139,12 @@
 }
 
 /* StacPanel styles */
-.jgis-stac-panel-tabs {
-  box-shadow: none;
-}
+/* .jgis-stac-panel-tabs {
+  box-shadow: none !important;
+} */
 
 .jgis-stac-panel-tabs-list {
-  border-radius: 0;
+  border-radius: 0 !important;
 }
 
 .jgis-stac-panel-placeholder {
@@ -158,14 +164,13 @@
 
 /* QueryableComboBox styles */
 .jgis-queryable-combo-container {
-  display: flex;
-  flex-direction: column;
+  display: flex !important;
+  flex-direction: column !important;
 }
 
 .jgis-queryable-combo-button {
   width: 200px;
-  display: flex;
-  justify-content: space-between;
+  justify-content: space-between !important;
 }
 
 .jgis-queryable-combo-icon {
@@ -210,7 +215,7 @@
 .jgis-stac-queryable-filters {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
+  gap: 0.5rem;
 }
 
 .jgis-stac-queryable-filters-radio-group {
@@ -227,4 +232,9 @@
 /* StacPanelResults styles */
 .jgis-stac-panel-results-pagination {
   margin-top: 0;
+}
+
+.jgis-panel-tab-content-stac-panel {
+  padding-top: 0 !important;
+  border-top: 1px solid var(--jp-border-color0);
 }
