--- a/packages/base/style/shared/input.css
+++ b/packages/base/style/shared/input.css
@@ -1,6 +1,6 @@
 [data-slot='input'] {
   height: 1.125rem;
-  width: 100%;
+  width: auto;
   min-width: 0;
   border-radius: 0.375rem;
   border: 1px solid var(--jp-border-color1);
