--- a/packages/base/style/shared/button.css
+++ b/packages/base/style/shared/button.css
@@ -1,9 +1,10 @@
 .jgis-button {
+  box-sizing: border-box;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   white-space: nowrap;
-  border-radius: 0.375rem;
+  border-radius: var(--jp-border-radius, 0.375rem);
   font-size: 0.875rem;
   font-weight: 600;
   outline: none;
@@ -12,7 +13,7 @@
   border: 0.0375rem solid
     color-mix(in srgb, var(--jp-border-color1), transparent 20%);
   transition: background-color 0.2s ease;
-  height: 2.5rem;
+  height: 2.25rem;
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 0.5rem;
@@ -146,14 +147,14 @@
 /* sizing */
 .jgis-button[data-size='sm'] {
   height: 2.25rem;
-  border-radius: 0.375rem;
+  border-radius: var(--jp-border-radius, 0.375rem);
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
 
 .jgis-button[data-size='lg'] {
   height: 2.75rem;
-  border-radius: 0.375rem;
+  border-radius: var(--jp-border-radius, 0.375rem);
   padding-left: 2rem;
   padding-right: 2rem;
 }
