--- a/packages/base/style/shared/input.css
+++ b/packages/base/style/shared/input.css
@@ -1,8 +1,9 @@
 [data-slot='input'] {
+  box-sizing: border-box;
   height: 1.125rem;
   width: auto;
   min-width: 0;
-  border-radius: 0.375rem;
+  border-radius: var(--jp-border-radius, 0.375rem);
   border: 1px solid var(--jp-border-color1);
   background-color: transparent;
   padding: 0.25rem 0.75rem;
