--- a/packages/base/style/statusBar.css
+++ b/packages/base/style/statusBar.css
@@ -5,6 +5,7 @@
   height: 16px;
   background-color: var(--jp-layout-color1);
   font-size: var(--jp-ui-font-size0);
+  z-index: 1000;
 }
 
 .jgis-status-bar-item {
