--- a/packages/base/style/storyPanel.css
+++ b/packages/base/style/storyPanel.css
@@ -94,7 +94,7 @@
   align-items: center;
   background: linear-gradient(
     to left,
-    rgba(221, 160, 221, 0.9) 70%,
+    var(--jgis-specta-bg-color, rgba(221, 160, 221, 0.9)) 70%,
     transparent
   );
 }
@@ -103,7 +103,7 @@
   width: 70%;
   font-size: var(--jp-ui-font-size3);
   padding-right: 0.5rem;
-  color: var(--jp-ui-inverse-font-color1);
+  color: var(--jgis-specta-text-color, var(--jp-ui-inverse-font-color1));
 }
 
 .jGIS-property-panel
@@ -115,6 +115,6 @@
   .jp-FormGroup-content
   fieldset
   .jp-inputFieldWrapper
-  > input#root_presrevertnTextColor {
+  > input#root_presentaionTextColor {
   height: revert;
 }
