--- a/packages/base/style/storyPanel.css
+++ b/packages/base/style/storyPanel.css
@@ -1,4 +1,9 @@
 .jgis-story-viewer-panel {
+  padding: 1rem;
+}
+
+
+.jgis-story-viewer-panel {
   overflow: hidden;
 }
 
@@ -55,7 +60,6 @@
 }
 
 .jgis-story-viewer-content {
-  padding-left: 16px;
 }
 
 .jgis-story-viewer-content p,
@@ -94,7 +98,7 @@
   align-items: center;
   background: linear-gradient(
     to left,
-    var(--jgis-specta-bg-color, rgba(221, 160, 221, 0.9)) 70%,
+    var(--jgis-specta-bg-color, rgba(221, 160, 221, 0.9)) 71%,
     transparent
   );
 }
