--- a/packages/base/style/shared/tabs.css
+++ b/packages/base/style/shared/tabs.css
@@ -61,7 +61,7 @@
   outline: none;
   width: 100%;
   overflow-y: scroll;
-  max-height: 480px;
+  /* max-height: 480px; */
   padding-top: 1rem;
 }
 
