--- a/packages/base/style/storyPanel.css
+++ b/packages/base/style/storyPanel.css
@@ -2,7 +2,6 @@
   padding: 1rem;
 }
 
-
 .jgis-story-viewer-panel {
   overflow: hidden;
 }
@@ -20,7 +19,8 @@
 .jgis-story-viewer-image {
   width: 100%;
   height: 100%;
-  max-height: 240px;
+  max-height: 33%;
+  /* max-height: 240px; */
   object-fit: cover;
   display: block;
   border-radius: var(--jp-border-radius);
@@ -98,13 +98,13 @@
   align-items: center;
   background: linear-gradient(
     to left,
-    var(--jgis-specta-bg-color, rgba(221, 160, 221, 0.9)) 71%,
+    var(--jgis-specta-bg-color, rgba(221, 160, 221, 0.9)) 60%,
     transparent
   );
 }
 
 .jgis-story-viewer-panel-specta-mod {
-  width: 70%;
+  width: 75%;
   font-size: var(--jp-ui-font-size3);
   padding-right: 0.5rem;
   color: var(--jgis-specta-text-color, var(--jp-ui-inverse-font-color1));
