--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -42,6 +42,7 @@
 }
 
 .jGIS-property-panel .rjsf .array-item:not(:last-child) {
+  background-color: pink;
   border-bottom: none;
   margin-bottom: unset;
   padding-bottom: unset;
@@ -91,6 +92,7 @@ button.jp-mod-styled.jp-mod-reject {
 }
 
 .jgis-right-panel-container {
+  background-color: pink;
   width: 330px;
   top: 30px;
   right: 0px;
@@ -100,6 +102,7 @@ button.jp-mod-styled.jp-mod-reject {
 }
 
 .jgis-left-panel-container {
+  background-color: pink;
   position: absolute;
   width: 250px;
   top: 30px;
