--- a/packages/base/style/storyPanel.css
+++ b/packages/base/style/storyPanel.css
@@ -17,7 +17,7 @@
   width: 100%;
   height: 100%;
   max-height: 50vh;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
   border-radius: var(--jp-border-radius);
 }
